# common

./: .gitignore  LICENSE  kafka_client.py  pyproject.toml  s3_client.py
common/: dynamodb_client.py
src/common/: kafka_client.py  s3_client.py  slack_client.py
