[tool.poetry]
name = "common"
version = "0.1.0"
description = "Shared utilities for MCP services"
authors = ["Peng Chen <chenpengcnbj@gmail.com>"]
packages = [{ include = "common" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.162"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"